# asistente

./: .env  .gitignore  README.md  app.py  pyproject.toml  requirements.txt  test_connection.py
.github/workflows/: main.yml
src/: __init__.py
src/asistente_agenda/: __init__.py  crew.py  main.py
src/asistente_agenda/config/: agents.yaml  tasks.yaml
src/asistente_agenda/tools/: outlook_calendar_tool.py  whatsapp_business_messenger.py
src/microsoft_outlook_appointment_scheduling_assistant/: __init__.py  crew.py  main.py
src/microsoft_outlook_appointment_scheduling_assistant/config/: agents.yaml  tasks.yaml
